load chatroom from internal code

--- a/rasachatwidget/index.html
+++ b/rasachatwidget/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="https://cdn.statically.io/gh/weberi/chatroom/master/dist/Chatroom.css" />
-  <link rel="stylesheet" type="text/css" href="https://cdn.statically.io/gh/weberi/chatroom/master/index.css">
-  <!-- <link rel="stylesheet" type="text/css" href="https://cdn.statically.io/gh/weberi/chatroom/master/themes/theme3.css" /> -->
+  <link rel="stylesheet" href="./Chatroom.css" />
+  <link rel="stylesheet" type="text/css" href="./index.css">
+  <!-- <link rel="stylesheet" type="text/css" href="./themes/theme3.css" /> -->
 </head>
 <body>
   <div class="chat-container"></div>
-  <script src="https://cdn.statically.io/gh/weberi/chatroom/master/dist/Chatroom.js"></script>
+  <script src="./Chatroom.js"></script>
 
   <script type="text/javascript">
     var chatroom = new window.Chatroom({
